--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 # docs: https://www.rainbond.com/docs/installation/install-with-dind
 
+APP_CONSOLE_PORT=7070
+APP_SITE_HTTP_PORT=80
+APP_SITE_HTTPS_PORT=443
+APP_WEBSOCKET_PORT=6060
+APP_API_PORT=8443
+APP_TCP_PORT=10000
 
 version: '3.8'
 
@@ -8,11 +14,12 @@ services:
     image: registry.cn-hangzhou.aliyuncs.com/goodrain/rainbond:${APP_VERSION}
     container_name: ${APP_NAME}
     ports:
-      - '${APP_HTTP_PORT}:7070'
-      - '${APP_HTTPS_PORT}:8443'
-      - '80:80'
-      - '443:443'
-      - '6060:6060'
+      - '${APP_CONSOLE_PORT}:7070'
+      - '${APP_SITE_HTTP_PORT}:80'
+      - '${APP_SITE_HTTPS_PORT}:443'
+      - '${APP_WEBSOCKET_PORT}:6060'
+      - '${APP_API_PORT}:8443'
+      - '${APP_TCP_PORT}:10000'
     privileged: true
     environment:
       - ENABLE_CLUSTER=true
